# python-project-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/: example_entry.py
src/example_dir/: example_file.py
