[project]
name = "python-project-template"
version = "1.0.0"
description = "python project template, change this when using"
authors = [{ name = "ch55secake"} ]
license = {text = "GPL-3.0"}
readme = "README.md"

requires-python = ">=3.12"

[tool.poetry]
packages = [{ include = "src" }]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
pylint = "3.3.6"
black = "25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "3.14.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
